updating console.log output

--- a/generators/react/templates/.babelrc
+++ b/generators/react/templates/.babelrc
@@ -5,8 +5,7 @@
       "env",
       {
         "targets" : {
-          "browsers" : "last 2 versions",
-          "chrome" : "56"
+          "browsers" : "last 2 versions"
         },
         "loose" : true,
         "modules" : false
